[project]
name = "recipes"
version = "0.1.0"
description = "Fetch saved recipes from Instagram and build a Hugo static site."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Luis Chaves" }]
dependencies = [
    "jinja2",
    "pillow",
    "requests",
    "tqdm",
]

[dependency-groups]
dev = ["ruff"]
